--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>SkelGuessr</title>
   <link rel="icon" href="/public/assets/favicon.webp">
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
@@ -59,7 +59,7 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/cannon@0.6.2/build/cannon.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/index.js"></script>
 </body>
 
 </html>
