--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/cannon@0.6.2/build/cannon.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
-  <script type="module" src="public/src/index.js"></script>
+  <script type="module" src="src/index.js"></script>
 </body>
 
 </html>
