--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>SkelGuessr</title>
-  <link rel="icon" href="/public/assets/favicon.webp">
+  <link rel="icon" href="src/public/assets/favicon.webp">
   <link rel="stylesheet" href="/styles.css">
 </head>
 
