--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
           <p>Pour jouer :</p>
           <ul>
             <li>Appuyez sur le bouton "START XR" en bas de la page.</li>
-            <li>Un cercle blanc va s'afficher et se fixer au sol. Assurez vous que le sol soit bien plat pour une meilleure détection.</li>
-            <li>Placez le squelette dans votre environnement avec un clic prolongé (3 secondes), il fera environ 1m80.</li>
+            <li>Un cercle blanc va s'afficher et se fixer au sol. Assurez vous que le sol soit bien plat pour une
+              meilleure détection.</li>
+            <li>Placez le squelette dans votre environnement avec un clic prolongé (3 secondes), il fera environ 1m80.
+            </li>
             <li>Cliquez sur les os, quatre choix vous seront proposés, choisissez le bon.</li>
             <li>Vous pouvez replacer le squelette à tout moment avec un clic prolongé.</li>
           </ul>
